{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "043fd38e-6cc5-4c59-bad2-7b22a42d54fa",
            "actions": [
                {
                    "name": "SwitchCam1",
                    "type": "PassThrough",
                    "id": "61841b22-69c8-4c1a-b1a5-6ebe3a4147b1",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchCam2",
                    "type": "PassThrough",
                    "id": "eb297895-bfc4-4da2-baf2-6fa36ab677af",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchCam3",
                    "type": "PassThrough",
                    "id": "6944fdbf-329e-4ea9-8c89-80f2ed814fb0",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchCam4",
                    "type": "PassThrough",
                    "id": "34a0702b-45fe-4cc4-8b48-f15ae8a6818c",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchCam5",
                    "type": "PassThrough",
                    "id": "88a5edad-6ab5-41df-8b79-a9964ec2f9c9",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchCam6",
                    "type": "PassThrough",
                    "id": "f23b372d-4794-438b-b8d6-3ab02d35b55d",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchCam7",
                    "type": "PassThrough",
                    "id": "ce980f04-d611-4bf2-9a0e-335aa78499ac",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchCam8",
                    "type": "PassThrough",
                    "id": "98395b3a-945d-4548-97a9-303c166ef234",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchCam9",
                    "type": "PassThrough",
                    "id": "4c48973e-adc1-40b0-a207-d76437f40760",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchCam10",
                    "type": "PassThrough",
                    "id": "f29099e3-bb69-444c-9dff-2c2ee1c95522",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchCam11",
                    "type": "PassThrough",
                    "id": "a1fa6696-ed95-452f-9fb2-5e60610fd7c1",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchCam12",
                    "type": "PassThrough",
                    "id": "d34e1d90-3ee7-4743-8a40-f169b7b1ee4e",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3e735851-14af-4869-ac9a-ac7b85fcbd31",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchCam1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4e44f816-7417-48ff-8682-84268543fa24",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchCam2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cd1e308c-4a3f-4b8d-8f3d-0482419ee088",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchCam3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa267699-925b-4705-bc67-6f4f49596aee",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchCam4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41b55968-849a-45c7-8d15-26e041ef9197",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchCam5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "03974b91-fc4e-44a1-bd93-965565b9a937",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchCam6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "172869d9-4c3b-4a8b-869d-279842cb3f50",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchCam7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d5a88ed9-d76d-49f2-8d85-8138e638c309",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchCam8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9aab5876-c0cd-4799-ae20-cd61ab0fe985",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchCam9",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a04875c3-28ba-45d0-a917-15b614864c61",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchCam10",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "63880185-29bb-4e3e-a3e7-6583c75e903d",
                    "path": "<Keyboard>/minus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchCam11",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f29f5b70-d607-4578-a006-bb991d1e2df5",
                    "path": "<Keyboard>/equals",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchCam12",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}